# bigname

./: .dockerignore  .env.example  .env.server.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.reth-db.yml  docker-compose.server.yml  docker-compose.yml
apps/worker/: Cargo.toml
apps/worker/src/: address_names.rs  children.rs  cli.rs  commands.rs  inspect.rs  main.rs  name_current.rs  permissions.rs  primary_name.rs  raw_facts.rs  record_inventory.rs  replay.rs  resolver.rs
apps/worker/src/address_names/: load.rs  model.rs  rebuild.rs  tests.rs  util.rs
apps/worker/src/name_current/: decode.rs  load.rs  supplemental.rs  tests.rs  types.rs  wildcard.rs
apps/worker/src/permissions/: canonicality.rs  json.rs  load.rs  project.rs  tests.rs  types.rs
apps/worker/src/primary_name/: projection.rs  query.rs  types.rs
apps/worker/src/projection_apply/: apply.rs  apply_locks.rs  derive_queries.rs  tests.rs
apps/worker/src/record_inventory/: json.rs  loading.rs  profile.rs  projection.rs  tests.rs  types.rs
apps/worker/src/replay/: json.rs  ordering.rs  rebuild.rs  summary.rs  tests.rs
crates/adapters/: Cargo.toml
crates/adapters/src/: adapter_manifest.rs  block_derived_normalized_events.rs  ens_v1_reverse_claim.rs  ens_v1_subregistry_discovery.rs  ens_v1_unwrapped_authority.rs  ens_v2_common.rs  ens_v2_permissions.rs  ens_v2_registrar.rs  ens_v2_registry.rs  ens_v2_resolver.rs  evm_abi.rs  lib.rs  manifest_normalized_events.rs  registry_migration_cache.rs
crates/manifests/: Cargo.toml
crates/manifests/src/: lib.rs
(+539 files in other folders)
